[package]
name = "tura_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
arboard.workspace = true
base64.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tauri = { workspace = true, features = ["protocol-asset"] }
tauri-plugin-single-instance.workspace = true
tura_path.workspace = true
url.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
