[package]
name = "generate_media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tura_command_generate_media"
path = "mod.rs"

[[bin]]
name = "tura-command-generate-media"
path = "src/main.rs"

[features]
business-tests = []
live-tests = []

[[test]]
name = "generate_media_local_flow"
path = "tests/business/generate_media_local_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "generate_media_live_provider_check"
path = "tests/live/generate_media_live_provider_check.rs"
required-features = ["live-tests"]

[dependencies]
base64.workspace = true
dotenvy.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
provider = { workspace = true }

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
