[package]
name = "web_discover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tura_command_web_discover"
path = "mod.rs"

[[bin]]
name = "tura-command-web-discover"
path = "src/main.rs"

[features]
business-tests = []

[[test]]
name = "web_discover_local_flow"
path = "tests/business/web_discover_local_flow.rs"
required-features = ["business-tests"]

[dependencies]
quick_html2md.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
provider = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
